# Secluded-Majorana-SIDM

./: .gitignore  CITATION.cff  LICENSE  LICENSE-CC-BY  OMER.MD  README.md  TODO.md  _chi2_fit_log.txt  _map_compat_log.txt  _mcmc_err.txt  _mcmc_log.txt  _obs_comp_log.txt  _opusB_obs_log.txt  _patch_tg_notify.py  _steps789_done.txt  gemini_talk_with_omer.md  pyproject.toml  requirements.txt  setup.py
The_Lagernizant_integral_SIDM/: _test_rho.py  _verify_formula.py  check4_output.txt  lagrangian_path_integral.py  research_journal.md  test_PI11_deriv_coupling_standalone_colab.py  test_PI12_clockwork_standalone_colab.py  test_PI12_v2_proper_KT_colab.py  test_PI13_sommerfeld_standalone_colab.py  test_PI14_17_combined_standalone_colab.py  test_PI14_17_v2_proper_KT_colab.py  test_PI18_19_boltzmann_hubble_colab.py  test_PI8_phase_transition_relic.py  test_PI8_standalone_colab.py  test_PI9_pwave_standalone_colab.py  test_physics_checks.py
The_derivative_of_Lagernizan_SIDM/: _tee_output.py  _vpm_fast.py  lagrangian_derivation.md  lagrangian_euler_lagrange.py  methodology.md  research_journal.md  run_pipeline.py  test_T10_dirac_mimicry.py  test_T11_thermal_averaging.py  test_T12_resonance_map.py  test_T1_alpha_convention.py  test_T4_majorana_weights.py  test_T6_annihilation_relic.py  test_T7_boltzmann_all_bps.py  test_T8_transfer_vs_elastic.py  test_T9_majorana_vs_dirac.py
_tmp_checks/: check1_perturbativity.py  check2_unitarity.py  check3_kaplinghat.py  check4_fornax_gc.py  check5_oman_diversity.py  check_a4_compat.py  check_t10_summary.py
arxiv/: copy_figures.ps1  main.tex  (+3 more)
(+318 files in other folders)
